# frame_comp

./: Cargo.toml  README.md
src/: lib.rs
src/vulkan/: commands.rs  descriptors.rs  framebuffer.rs  mod.rs  pipeline.rs  push_constants.rs  render_pass.rs  sampler.rs  vertex.rs
src/vulkan/buffers/: buffer.rs  descriptors.rs  mod.rs  vertex_buffer.rs
src/vulkan/shaders/: frag.spv  shader.frag  shader.vert
